fixtures/external/negative/spreadsheet-app-internal-import/runtime.mjs
await import('@mog-sdk/spreadsheet-app/internal');
